--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,76 @@
   <meta charset="UTF-8">
   <title>Collezione Notgeld</title>
   <style>
-    body { font-family: sans-serif; max-width: 800px; margin: auto; text-align: center; }
-    .lettere button { margin: 3px; padding: 5px 10px; }
-    .disabilitata { background-color: #eee; color: #aaa; cursor: default; }
-    .attiva { background-color: #ddd; border: 2px solid black; }
-    .gruppo { text-align: left; margin-top: 20px; }
-    .notgeld { border: 1px solid #ccc; padding: 5px; margin: 5px 0; border-radius: 4px; }
-  </style>
+  body {
+    font-family: sans-serif;
+    max-width: 800px;
+    margin: auto;
+    text-align: center;
+    padding: 20px;
+  }
+
+  .lettere {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 6px;
+    margin-bottom: 20px;
+  }
+
+  .lettere button {
+    border: 1px solid #ddd;
+    background-color: #f8f9fa;
+    color: #333;
+    font-size: 16px;
+    padding: 6px 10px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: all 0.2s;
+    min-width: 32px;
+  }
+
+  .lettere button:hover:not(:disabled) {
+    background-color: #e2e6ea;
+  }
+
+  .lettere button.attiva {
+    border: 2px solid #000;
+    background-color: #ffffff;
+  }
+
+  .lettere button:disabled {
+    background-color: #f1f1f1;
+    color: #bbb;
+    cursor: not-allowed;
+  }
+
+  .gruppo {
+    text-align: left;
+    margin-top: 20px;
+  }
+
+  .notgeld {
+    border: 1px solid #ccc;
+    padding: 8px 10px;
+    margin: 6px 0;
+    border-radius: 5px;
+    background-color: #fefefe;
+    font-size: 16px;
+  }
+
+  a {
+    color: #673ab7;
+    text-decoration: none;
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: inline-block;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+</style>
+
 </head>
 <body>
   <h1>Collezione Notgeld</h1>
