--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
       lista.forEach(n => {
         const div = document.createElement('div');
         div.className = 'notgeld';
-        div.innerHTML = `<a href="dettaglio.html?id=${n.id}">${n.citta}</a>`;
+        div.innerHTML = `<a href="dettaglio.html?citta=${encodeURIComponent(n)}">${n}</a>`;
         gruppo.appendChild(div);
       });
 
