--- a/public/form.html
+++ b/public/form.html
@@ -39,6 +39,7 @@
   </form>
 
   <div id="esito"></div>
+  <script src="https://cdn.jsdelivr.net/npm/browser-image-compression@2.0.2/dist/browser-image-compression.js"></script>
 
   <script>
     const form = document.getElementById('notgeldForm');
