--- a/public/form.html
+++ b/public/form.html
@@ -45,16 +45,31 @@
     const form = document.getElementById('notgeldForm');
     const esito = document.getElementById('esito');
 
-    const uploadImage = async (file) => {
+   const uploadImage = async (file) => {
+  const options = {
+    maxWidthOrHeight: 1024,  // ridimensiona se più grande
+    maxSizeMB: 0.4,          // massimo 400 KB
+    useWebWorker: true,
+  };
+
+  try {
+    const compressed = await imageCompression(file, options);
     const formData = new FormData();
-    formData.append('file', file);
+    formData.append('file', compressed);
+
     const res = await fetch('/upload', {
       method: 'POST',
       body: formData
     });
+
     const data = await res.json();
-    return data.filename; // 👈 ora usiamo solo il filename
-    };
+    return data.filename;
+  } catch (err) {
+    console.error('Errore durante la compressione o l\'upload:', err);
+    alert('Errore durante il caricamento dell\'immagine');
+  }
+};
+
 
 
     form.addEventListener('submit', async (e) => {
