--- a/public/dettaglio.html
+++ b/public/dettaglio.html
@@ -28,7 +28,7 @@
 
   .immagini {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-end;
     gap: 10px;
   }
